infra/k8s/gitea/020-deployment.yaml
# TODO(axelmagn): https://medium.com/swlh/deploying-fully-functional-gitea-on-google-kubernetes-engine-gke-c4134e13cc2e

###################################################
# Namespace Gitea
###################################################
apiVersion: v1
kind: Namespace
metadata:
  name: gitea-repo

###############################
# Deployment Gitea
###############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea-repo
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.20
        ports:
        - containerPort: 3000
          name: git-http
        - containerPort: 22
          name: git-ssh
        volumeMounts:
        - mountPath: /data
          name: git-data
      volumes:
      - name: git-data-vol
        persistentVolumeClaim:
          claimName: git-data-pvc
